syntax = "proto3";

option csharp_namespace = "Kodla.Meetup.Processor.Grpc";

package MeetupApi;

service MeetupGrpcService {
    rpc GetAllMeetups(GetMeetupsRequest) returns (GetMeetupsResponse);
    rpc GetMeetupById(GetMeetupByIdRequest) returns (GetMeetupByIdResponse);
}

message GetMeetupsRequest {
}

message GetMeetupsResponse {
    repeated Meetup meetups = 1;
}

message GetMeetupByIdRequest {
    int32 meetupId = 1;
}

message GetMeetupByIdResponse {
    Meetup meetup = 1;
}

message Meetup {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string date = 4; // Use ISO 8601 format for date serialization
}
